Added an endpoint to get basically evetything from the db, and caching for that
